fix Services not lining up vertically on top of each other on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -371,9 +371,3 @@ footer{
         grid-column: 2 / 3;
     }
 }
-
-@media (min-width: 1200px){
-    #about p{
-        max-width:760px;
-    }
-}
